<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    android:paddingTop="8dp">

    <EditText
        android:id="@+id/sessionNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:hint="@string/session_name_hint"
        android:inputType="text"
        android:maxLines="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/session_type"
        android:textColor="@color/brand_blue"
        android:textSize="14sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/sessionTypeGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/typeProducts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/session_type_products" />

        <RadioButton
            android:id="@+id/typeRaw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/session_type_raw" />
    </RadioGroup>
</LinearLayout>
